@@ -1,3 +1,7 @@
+2011-04-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-05-43
+	* update "replace ModuleInstance", add "replace Sequence|Path"
+	
 2011-04-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-42
 	* Add "Import all" feature for PSets, EDSource, ESSources, ESModules and Services.
